[gd_scene load_steps=9 format=3 uid="uid://g16om7yqrxwd"]

[ext_resource type="Script" uid="uid://dwuop4ax7ukak" path="res://scenes/main/checkbox.gd" id="1_lxi5r"]
[ext_resource type="Texture2D" uid="uid://dfiuhs4xf4l4f" path="res://assets/ui/checkbox_unchecked.png" id="1_qkkco"]
[ext_resource type="Texture2D" uid="uid://c5sefbebd0r3p" path="res://assets/ui/check.png" id="2_lxi5r"]
[ext_resource type="FontFile" uid="uid://b5bptjjfvw3i2" path="res://assets/ui/dialogue/tiny5.ttf" id="3_ptftm"]
[ext_resource type="AudioStream" uid="uid://8n5d5fw42yrr" path="res://assets/audio/click_3.ogg" id="5_ptftm"]
[ext_resource type="AudioStream" uid="uid://drwli7wcujfbf" path="res://assets/audio/light_flame.ogg" id="6_ch3kj"]
[ext_resource type="AudioStream" uid="uid://daiqx4gcj5rwv" path="res://assets/audio/extinguish.mp3" id="7_p6t0k"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_lxi5r"]
size = Vector2(59, 8)

[node name="Checkbox" type="Node2D"]
script = ExtResource("1_lxi5r")

[node name="ClickTarget" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="ClickTarget"]
position = Vector2(29.5, 4)
shape = SubResource("RectangleShape2D_lxi5r")

[node name="Box" type="TextureRect" parent="."]
offset_right = 8.0
offset_bottom = 8.0
texture = ExtResource("1_qkkco")

[node name="CheckMark" type="TextureRect" parent="."]
offset_right = 8.0
offset_bottom = 8.0
texture = ExtResource("2_lxi5r")

[node name="Label" type="Label" parent="."]
offset_left = 10.0
offset_right = 31.0
offset_bottom = 9.0
mouse_filter = 1
theme_override_colors/font_color = Color(0.18359044, 0.18359044, 0.18359044, 1)
theme_override_fonts/font = ExtResource("3_ptftm")
theme_override_font_sizes/font_size = 8

[node name="SfxTick" type="AudioStreamPlayer" parent="."]
stream = ExtResource("5_ptftm")

[node name="SfxLight" type="AudioStreamPlayer" parent="."]
stream = ExtResource("6_ch3kj")
volume_db = -10.0

[node name="SfxExtinguish" type="AudioStreamPlayer" parent="."]
stream = ExtResource("7_p6t0k")
volume_db = -10.0
